# newborn-diary-telegram-bot

./: .coverage_conf  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  Dockerfile  README.md  TELEGRAM_BOT_SETUP.md  conftest.py  docker-compose.dev.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  settings.dev.yml.example  settings.py  settings.test.yml
.github/workflows/: ci.yml
.memory/: src.md
application/: dto.py  ports.py
application/services/: action_retry_queue.py  diary_api_client.py
domain/: __init__.py  pending_action.py  policies.py  quick_actions.py
infrastructure/: composition.py  diary_api_client.py  logging.py
infrastructure/endpoints/: __init__.py  get_metrics.py  health_check.py
infrastructure/metrics/: __init__.py  decorators.py  main.py
infrastructure/models/: __init__.py  fsm_state.py  pending_action.py
infrastructure/repositories/: fsm_state_storage.py  pending_action_repository.py
infrastructure/telegram/: handlers.py  handlers_tests.py  keyboards.py  runner.py
tests/: action_retry_queue_tests.py  architecture_tests.py  conftest.py  diary_api_client_tests.py  domain_policy_tests.py  dto_tests.py  fsm_state_storage_tests.py  handlers_tests.py  health_check_tests.py  keyboards_tests.py  runner_tests.py
tests/lib/: fixtures.py
